# pedestrian_detector

pedestrian_detector/: CMakeLists.txt  package.xml
pedestrian_detector/.cache/clangd/index/: pedestrian_detector_node.cpp.D34E2551010166ED.idx  pedestrian_detector_node.hpp.28AEAA366D37313A.idx  yolov8.cpp.C1A01D16A533216E.idx  yolov8.hpp.13E31AE6A5AA94D7.idx
pedestrian_detector/config/: pedestrian_detector.yaml
pedestrian_detector/include/pedestrian_detector/: pedestrian_detector_node.hpp  yolov8.hpp
pedestrian_detector/launch/: bringup.launch.py
pedestrian_detector/src/: pedestrian_detector_node.cpp  yolov8.cpp
